# AION

./: .env.example  .gitignore  CAPABILITIES.md  COMPETITIVE_ANALYSIS.md  EVOLUTION_LOG.md  LONG_TERM_PLAN.md  README.md  ROADMAP.md  ROADMAP_DETAILED.md  aion.py  aion_dashboard.html  aion_server.py  consciousness_state.json  evolution_log.json  fast_runner.py  knowledge_cache.json  physics_visualizer.html  protein_3d_viewer.html  protein_analysis_demo.py  protein_complete.html  protein_comprehensive.html  protein_folding_demo.py  protein_physics_explorer.html  protein_pro.html  protein_ultimate.html  protein_visualizer.html  pyproject.toml  run_tests.py  self_develop.py  test_output.txt  verify_advanced.py
aion_memory/: knowledge.json
data/: aion_daemon_state.json
docs/: EVOLUTION_LOG.md  INSTALLATION.md  getting-started.md  language-reference.md
examples/: advanced_v2.aion  assistant.aion  chem_explorer.aion  code_assistant.aion  creative_mind.aion  god_mode.aion  knowledge_agent.aion  math_solver.aion  meta_cognition.aion  multi_agent.aion  my_first_agent.aion  physics_complete.aion  physics_sim.aion  protein_folder.aion  quantum_agent.aion  researcher.aion  swarm_coordinator.aion
grammar/: grammar.ebnf
scripts/: awaken.py  benchmark.py  daemon.py  daily_improvement.py  demo.py  generate_dashboard_stats.py  improve.py  repl.py  self_develop.py  test_all_capabilities.py
src/: __init__.py  __main__.py  ast_cache.py
tests/: __init__.py  test_agent_builder.py  test_ast_cache.py  test_bytecode.py  test_consciousness.py  test_domains.py  test_embodied.py  (+16 more)
(+206 files in other folders)
