[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aion"
version = "0.1.0"
description = "AION - Artificial Intelligence Oriented Notation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AION Contributors"}
]
keywords = ["ai", "agent", "llm", "declarative", "programming-language"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
ollama = ["httpx>=0.25.0"]
all = ["openai>=1.0.0", "anthropic>=0.18.0", "httpx>=0.25.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0", "numpy>=1.24.0", "black", "ruff"]

[project.scripts]
aion = "src.__main__:main"

[project.urls]
Homepage = "https://github.com/aion-lang/aion"
Documentation = "https://aion-lang.dev/docs"
Repository = "https://github.com/aion-lang/aion"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
